--- a/config_output.yaml
+++ b/config_output.yaml
@@ -4,7 +4,8 @@ branch: master
 #  - CKV_DOCKER_1
 compact: true
 directory:
-  - iac_input_files
+  - ./
+  # - iac_input_files
   # - aws_cfn_files/EC2
 # docker-image: sample-image
 # dockerfile-path: Dockerfile
