--- a/config_output.yaml
+++ b/config_output.yaml
@@ -20,6 +20,7 @@ external-checks-git:
 framework:
   # - cloudformation
   - terraform
+  - cloudformation
 # no-guide: true
 output: sarif
 # quiet: true
