--- a/config_output.yaml
+++ b/config_output.yaml
@@ -3,8 +3,8 @@ branch: master
 # check:
 #  - CKV_DOCKER_1
 compact: true
-directory:
-  - ./
+# directory:
+  # - ./
   # - iac_input_files
   # - aws_cfn_files/EC2
 # docker-image: sample-image
